# tiny-nn

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.json
code/headers/: ActivationType.hpp  CpuLayer.hpp  GpuLayer.hpp  Layer.hpp  LayerBase.hpp  MNISTLoader.hpp  Matrix.hpp  Model.hpp  ParallelExecutor.hpp  Tensor.hpp  Timer.hpp  benchmark.hpp  cpu_loss.hpp  fc_cpu.hpp  fc_cuda.hpp  kernels_cuda.cuh  matrix.hpp  model.hpp  neural_layer_gpu.hpp  tensor.hpp  utils.hpp
code/sources/: ActivationType.cpp  CpuLayer.cpp  GpuLayer.cpp  Layer.cpp  LayerBase.cpp  MNISTLoader.cpp  Model.cpp  Tensor.cpp  benchmark.cpp  fc_cpu.cpp  fc_cuda.cu  kernels_cuda.cu  main.cpp  neural_layer_gpu.cu
data/: generate_model.py
data/models/: model_small1.json  model_small2.json
data/results/: bench.csv
results/: bench.csv
scripts/: download_mnist.py  generate_model.py  preview.py
test/: CMakeLists.txt
test/headers/: benchmark.hpp
test/sources/: benchmark.cpp  test_main.cpp
